# clist

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  clist.c  clist.h  clist_unittests.cc  double_ll.h  googletest.cmake  gtest.cmake  list.h  sortrecords.c  travis.sh
include/clist/: clist.h
src/: clist.c
tests/: clist_unittests.cc
